Fixed visibility issue on read

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,8 +18,9 @@
 #RFID_ID{
 
   /*margin-left: -10000px;*/
-  visibility: hidden;
-
+  /*visibility: hidden;*/
+  width:0%;
+  border: 0px;
 }
 
 /* For presentation, probably get rid of later */
